parallel and series circuits section

--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -19,3 +19,9 @@ layout: electrical-engineering
     <p>We can even have two light bulbs: </p>
     <p>The following circuit uses two batteries and two loads, a toaster and a light bulb: </p>
 </section>
+
+<section>
+    <h2>Parallel and Series Circuits</h2>
+    <p>A series circuit is a circuit where all of the electrical components are connected on the same wire. One disadvantage is that if one component fails, the electrons stop flowing and none of the others can work: </p>
+    <p>A parallel circuit is where all of the electrical components are connected in parallel to each other. One advantage is that if one component fails, all the others can operate: </p>
+</section>
