--- a/physics/electrical-engineering/resistance.html
+++ b/physics/electrical-engineering/resistance.html
@@ -4,3 +4,5 @@ permalink: /physics/electrical-engineering/resistance/
 layout: electrical-engineering
 ---
 <h1>Resistance</h1>
+
+<p><em>Resistance</em> is a measure of how much something blocks electricity. You can think of resistance as friction for electricity.</p>
