--- a/physics/electrical-engineering/resistance.html
+++ b/physics/electrical-engineering/resistance.html
@@ -6,3 +6,4 @@ layout: electrical-engineering
 <h1>Resistance</h1>
 
 <p><em>Resistance</em> is a measure of how much something blocks electricity. You can think of resistance as friction for electricity.</p>
+<p>Since we don't live in a perfect world, everything has resistance. Even the wires have resistance, albeit very low resistance.</p>
