--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -17,7 +17,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
     <div style="height: 100px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">-29</div>
     <div style="height: 100px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">6</div>
     <div style="height: 100px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">38</div>
-    <p>WIth these pancakes, you can either put some more pancakes on top of the stack, or remove the pancake on top of the stack. It's the same with Stacks in Programming. It's "First In, Last Out", meaning that6 the first elements you add to the Stack will get removed last.</p>
+    <p>WIth these pancakes, you can either put some more pancakes on top of the stack, or remove the pancake on top of the stack. It's the same with Stacks in Programming. It's "First In, Last Out", meaning that the first elements you add to the Stack will get removed last.</p>
 </section>
 
 <section>
