--- a/physics/electrical-engineering/resistance.html
+++ b/physics/electrical-engineering/resistance.html
@@ -7,3 +7,4 @@ layout: electrical-engineering
 
 <p><em>Resistance</em> is a measure of how much something blocks electricity. You can think of resistance as friction for electricity.</p>
 <p>Since we don't live in a perfect world, everything has resistance. Even the wires have resistance, albeit very low resistance.</p>
+<p>We can add resistance on purpose with <em>resistors</em>. Resistors are can be used for limiting the amount of current when dealing with sensitive electrical components.</p>
