--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -22,7 +22,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 
 <section>
     <h2>Stack Implementation</h2>
-    <p></p>
+    <p>In Python, we can use <i>lists</i> to represent Stacks. Lists already come pre-built with the needed functions to make a Stack. SO as an example, we'll use a browser history system to demonstarte the behavior of a Stack.</p>
 </section>
 
 <section>
