--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -23,6 +23,10 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 <section>
     <h2>Stack Implementation</h2>
     <p>In Python, we can use <i>lists</i> to represent Stacks. Lists already come pre-built with the needed functions to make a Stack. So as an example, we'll use a browser history system to demonstarte the behavior of a Stack.</p>
+    <pre><code class="language-python">
+history = [1, 2, 3]
+    </code></pre>
+    <p></p>
 </section>
 
 <section>
