--- a/physics/electrical-engineering/voltage.html
+++ b/physics/electrical-engineering/voltage.html
@@ -4,3 +4,5 @@ permalink: /physics/electrical-engineering/voltage/
 layout: electrical-engineering
 ---
 <h1>Voltage</h1>
+
+<p><em>Voltage</em> is the amount of pressure between two points in a circuit. This pressure is applied by the power source in order to push the electrons around the circuit.</p>
