--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -26,7 +26,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
     <pre><code class="language-python">
 history = [1, 2, 3]
     </code></pre>
-    <p>In this example, we represt our browser history with numbers. But, of course, you'd put the URL of a site when you are creating an actual browser.</p>
+    <p>In this example, we represent our browser history with numbers. But, of course, you'd put the URL of a site when you are creating an actual browser.</p>
 </section>
 
 <section>
