add code + expand

--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -27,6 +27,13 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 history = [1, 2, 3]
     </code></pre>
     <p>In this example, we represent our browser history with numbers. But, of course, you'd put the URL of a site as a string when you are creating an actual browser.</p>
+    <p>Then, type the following code into your program:</p>
+    <pre><code class="language-python">
+history.append(4)
+history.append(5)
+print(history.pop())
+print(history)
+    </code></pre>
 </section>
 
 <section>
