--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -25,3 +25,8 @@ layout: electrical-engineering
     <p>A series circuit is a circuit where all of the electrical components are connected on the same wire. One disadvantage is that if one component fails, the electrons stop flowing and none of the others can work: </p>
     <p>A parallel circuit is where all of the electrical components are connected in parallel to each other. One advantage is that if one component fails, all the others can operate: </p>
 </section>
+
+<section>
+    <h2>One Final Thing</h2>
+    <p>Before you close this tab or move on, check out the circuit lab at Phet. There, you can experiment with all of the electrical engineering concepts you are learning.</p>
+</section>
