add code output

--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -34,6 +34,8 @@ history.append(5)
 print(history.pop())
 print(history)
     </code></pre>
+    <p>After running the code, you'll get <samp>5
+[1, 2, 3, 4]</samp> printed out into the terinal.</p>
 </section>
 
 <section>
