--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -36,7 +36,7 @@ print(history)
     </code></pre>
     <p>After running the code, you'll get <samp>5
 [1, 2, 3, 4]</samp> printed out into the terinal.</p>
-    <p>On the first two lines, we call the <code>.append</code> method on our <code>history</code> list.</p>
+    <p>On the first two lines, we call the <code>append</code> method on our <code>history</code> list.</p>
 </section>
 
 <section>
