--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -28,5 +28,5 @@ layout: electrical-engineering
 
 <section>
     <h2>One Final Thing</h2>
-    <p>Before you close this tab or move on, check out the circuit lab at Phet. There, you can experiment with all of the electrical engineering concepts you are learning.</p>
+    <p>Before you close this tab or move on, check out this <a href="https://phet.colorado.edu/en/simulations/circuit-construction-kit-dc">circuit simulation</a>. There, you can experiment with all of the electrical engineering concepts you are learning by building circuits.</p>
 </section>
