--- a/physics/electrical-engineering/index.html
+++ b/physics/electrical-engineering/index.html
@@ -10,3 +10,8 @@ layout: electrical-engineering
     <p>Electrical engineering deals with electricity, electronics, and electromagnetism. As you'd imagine, electrical engineering is incredibly important to all aspects of our lives.</p>
     <img src="/images/physics/electrical-engineering/electrical-engineering.png">
 </section>
+
+<section>
+    <h2>Why Learn Electrical Engineering?</h2>
+    <p>Electricity and electronics are fundamental to our lives and it's good to know how they work. Also, electrical engineering is in many curriculums worldwide.</p>
+</section>
