--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -4,3 +4,5 @@ permalink: /physics/electrical-engineering/capacitors/
 layout: electrical-engineering
 ---
 <h1>Capacitors</h1>
+
+<p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster.</p>
