--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -40,7 +40,7 @@ print(history)
     <p>Then, we have <pre><code class="language-python">
 print(history.pop())
 print(history)
-    </code></pre></p>
+    </code></pre> On the first line of this snippet, we use the <code>pop</code> method on our <code>history</code> list. The <code>pop</code> method will remove the last item from the list and return it. So, our program will print out the <code>5</code> from the end of the list. To make sure that our code has successfully run,</p>
 </section>
 
 <section>
