--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -45,5 +45,5 @@ print(history)
 
 <section>
     <h2>Stacks in Contests</h2>
-    <p></p>
+    <p>We've already gone over how Stacks work and how to implement one. So, now, let's go over using Stacks in Programming Competitions and Job Interview problems.</p>
 </section>
