--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -46,4 +46,16 @@ print(history)
 <section>
     <h2>Stacks in Contests</h2>
     <p>We've already gone over how Stacks work and how to implement one. So, now, let's go over using Stacks in Programming Competitions and Job Interview problems.</p>
+    <section>
+        <h3>When To Use Stacks</h3>
+        <p>In Programming problems, it is often useful to use Stacks when:</p>
+        <ul>
+            <li>Stacks Are Involved (Stacks Of Books)</li>
+            <li>There Is A "First In Last Out" Format</li>
+        </ul>
+    </section>
+    <section>
+        <h3>Implementing Stacks in COntests</h3>
+        <p></p>
+    </section>
 </section>
