--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -55,7 +55,7 @@ print(history)
         </ul>
     </section>
     <section>
-        <h3>Implementing Stacks in COntests</h3>
+        <h3>Implementing Stacks in Contests</h3>
         <p></p>
     </section>
 </section>
