--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -56,6 +56,6 @@ print(history)
     </section>
     <section>
         <h3>Implementing Stacks in Contests</h3>
-        <p>When you are using Stacks, you have two main options when it comes to implementing Stacks: creating your own <code>Stack</code> class or using lists, which are already built-in. Well, it's better to use your own class if you want to implement a couple of more complex features</p>
+        <p>When you are using Stacks, you have two main options when it comes to implementing Stacks: creating your own <code>Stack</code> class or using lists, which are already built-in. Well, it's better to use your own class if you want to implement a couple of more complex features. Of course, this would use up memory so try to limit to built-in functions if you can. So, it's a good idea to just use a <code>list</code> most of the time.</p>
     </section>
 </section>
