--- a/programming/python/data-structures-and-algorithms/data-structures.html
+++ b/programming/python/data-structures-and-algorithms/data-structures.html
@@ -5,3 +5,13 @@ permalink: /programming/python/data-structures-and-algorithms/data-structures/
 ---
 
 <h1>Data Structures</h1>
+
+<section>
+    <h2>What are Data Structures?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Different Data Structures</h2>
+    <p></p>
+</section>
