--- a/programming/python/data-structures-and-algorithms/algorithms.html
+++ b/programming/python/data-structures-and-algorithms/algorithms.html
@@ -5,3 +5,13 @@ permalink: /programming/python/data-structures-and-algorithms/algorithms/
 ---
 
 <h1>Algorithms</h1>
+
+<section>
+    <h2>What are Algorithms?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Different Algorithms</h2>
+    <p></p>
+</section>
