--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -5,7 +5,7 @@ permalink: /programming/python/data-structures-and-algorithms/binary-search/
 ---
 
 <h1>Binary Search</h1>
-<p>In this tutorial, we'll learn about Binary Search, the simplest Search Algorithm there is out there.</p>
+<p>In this tutorial, we'll learn about Binary Search, a simple and speedy Search Algorithm.</p>
 
 <section>
     <h2>What is a Binary Search?</h2>
