--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -9,7 +9,8 @@ permalink: /programming/python/data-structures-and-algorithms/binary-search/
 
 <section>
     <h2>What is a Binary Search?</h2>
-    <p>A Binary Search is the simplest and easiest Search Algorithm out there. It loops over an <i>array</i> (a <i>list</i>), and checks every item for the target element. Of course, it isn't very efficient if your element is at the end of the list and you have a lot of elements in your list. So, a Binary Search isn't often used in programming, but it is a fundamental idea.</p>
+    <p>A Binary Search is a simple and quick Search Algorithm. It searches for elements within an <i>array</i>, also known as a <i>list</i>, by cutting the list in half and searching half of a list for the element, and then cutting the list into quarters. Don't worry if you don't 
+    </p>
 </section>
 
 <section>
