--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -9,8 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/binary-search/
 
 <section>
     <h2>What is a Binary Search?</h2>
-    <p>A Binary Search is a simple and quick Search Algorithm. It searches for elements within an <i>array</i>, also known as a <i>list</i>, by cutting the list in half and searching half of a list for the element, and then cutting the list into quarters. Don't worry if you don't 
-    </p>
+    <p>A Binary Search is a simple and quick Search Algorithm. It searches for elements within an <i>array</i>, also known as a <i>list</i>, by cutting the list in half and searching half of a list for the element, and then cutting the list into quarters. Don't worry if you don't understand the concept yet.</p>
 </section>
 
 <section>
