replace + expand + add

--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -14,9 +14,9 @@ permalink: /programming/python/data-structures-and-algorithms/binary-search/
 
 <section>
     <h2>Binary Search Implementation</h2>
-    <p>A Binary Search is actually very easy to implement. We only need to <i>iterate</i>, or loop, over a list of elements and check if any of them are the same as the element we are looking for. Below is the implementation of a Binary Search:</p>
+    <p>A Binary Search is actually very easy to implement. Below is the implementation of a Binary Search:</p>
     <pre><code class="language-python">
-def Binary_search(arr, x):
+def binary_search(arr, x):
     """Finds the index of x in arr using a Binary Search Algorithm"""
     for index in range(len(arr)):
         if arr[index] == x:
