--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -6,3 +6,4 @@ layout: electrical-engineering
 <h1>Capacitors</h1>
 
 <p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster.</p>
+<p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em>.</p>
