what are transistors section

--- a/physics/electrical-engineering/transistors.html
+++ b/physics/electrical-engineering/transistors.html
@@ -4,3 +4,8 @@ permalink: /physics/electrical-engineering/transistors/
 layout: electrical-engineering
 ---
 <h1>Transistors</h1>
+
+<section>
+    <h2>What are Transistors?</h2>
+    <p>A transistor is like a switch, but instead of needing to be turned on and off by humans, they can be turned on and off with electricity. This makes them much, much faster switches. Transistors are very important in electrical engineering. As an example, your computer is built from billions of these tiny transistors.</p>
+</section>
