--- a/physics/electrical-engineering/ohms-law.html
+++ b/physics/electrical-engineering/ohms-law.html
@@ -4,3 +4,11 @@ permalink: /physics/electrical-engineering/ohms-law/
 layout: electrical-engineering
 ---
 <h1>Ohm's Law</h1>
+
+<section>
+    <h2>What is Ohm's Law?</h2>
+    <p>Ohm's law relates voltage, current, and resistance in a nice, simple equation: </p>
+    <blockquote>Voltage = Current x Resistance</blockquote>
+    <p>Voltage is usually abbreviated as <var>V</var>, current as <var>I</var>, and resistance as <var>R</var>. So, you will usually see Ohm's law written as: </p>
+    <blockquote>V = IR</blockquote>
+</section>
