--- a/physics/electrical-engineering/ohms-law.html
+++ b/physics/electrical-engineering/ohms-law.html
@@ -11,4 +11,5 @@ layout: electrical-engineering
     <blockquote>Voltage = Current x Resistance</blockquote>
     <p>Voltage is usually abbreviated as <var>V</var>, current as <var>I</var>, and resistance as <var>R</var>. So, you will usually see Ohm's law written as: </p>
     <blockquote>V = IR</blockquote>
+    <p>Ohm's law is named after German physicist Georg Ohm, who published this equation in 1827.</p>
 </section>
