using ohm's law section

--- a/physics/electrical-engineering/ohms-law.html
+++ b/physics/electrical-engineering/ohms-law.html
@@ -13,3 +13,14 @@ layout: electrical-engineering
     <blockquote>V = IR</blockquote>
     <p>Ohm's law is named after German physicist Georg Ohm, who published this equation in 1827.</p>
 </section>
+
+<section>
+    <h2>Using Ohm's Law</h2>
+    <p>If we know current and resistance, we can calculate the voltage using Ohm's law: </p>
+    <blockquote>V = IR</blockquote>
+    <p>If we know voltage and resistance, we can calculate the current using Ohm's law and algebra: </p>
+    <blockquote>I = V/R</blockquote>
+    <p>If we know voltage and current, we can calculate resistance using Ohm's law and algebra: </p>
+    <blockquote>R = V/I</blockquote>
+    <p>Resistance can't be measured while a circuit is operating, so if we need the resistance, we can simply use Ohm's law.</p>
+</section>
