add jekyll prereqs

--- a/programming/jekyll/index.html
+++ b/programming/jekyll/index.html
@@ -23,3 +23,11 @@ layout: jekyll
     <h2>History</h2>
     <p>Jekyll was written in Ruby by Tom Preston-Werner, the co-founder of GitHub, in 2012.</p>
 </section>
+
+<section>
+    <h2>Prerequisites</h2>
+    <p>Below are some prerequisites for this Jekyll tutorial series:</p>
+    <ul>
+        <li><a href="/programming/html/">HTML</a></li>
+    </ul>
+</section>
