--- a/programming/jekyll/setup.html
+++ b/programming/jekyll/setup.html
@@ -1,6 +1,6 @@
 ---
 title: Jekyll Setup
-permalink: /programming/jekyll/
+permalink: /programming/jekyll/setup/
 layout: jekyll
 ---
 <h1>Jekyll Setup</h1>
