--- a/programming/ruby/index.html
+++ b/programming/ruby/index.html
@@ -4,3 +4,13 @@ permalink: /programming/ruby/
 layout: ruby
 ---
 <h1>Introduction to Ruby</h1>
+
+<section>
+    <h2>What is Ruby?</h2>
+    <p>Ruby is a programming language</p>
+</section>
+
+<section>
+    <h2>Why Learn Ruby?</h2>
+    <p></p>
+</section>
