--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -37,6 +37,7 @@ layout: default
             <li><a href="/programming/java/">Java</a></li>
             <li><a href="/programming/git/">Git</a></li>
             <li><a href="/programming/jekyll/">Jekyll</a></li>
+            <li><a href="/programming/ruby/">Ruby</a></li>
         </ul>
     </li>
     <li><a href="/math/">Math</a>
