edit c++ intro link

--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -8,7 +8,7 @@ layout: cpp
 
 <section>
     <h2>What is C++?</h2>
-    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other things that <a href="/programming/c-lang/">C</a> does not have.</p>
+    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other things that <a href="/programming/c/">C</a> does not have.</p>
     <img src="/images/programming/cpp/cpp-logo.png" alt="C++ Logo">
 </section>
 
