--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -14,7 +14,7 @@ layout: cpp
 
 <section>
     <h2>History</h2>
-    <p>C++ was created by Bjarne Stroustrup as the successor to C. C++ is quite old compared to other programming languages, being released in 1985.</p>
+    <p>C++ was created by Bjarne Stroustrup as an improved version to C. C++ is quite old compared to other programming languages, being released in 1985.</p>
 </section>
 
 <section>
