update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -38,6 +38,7 @@ layout: default
             <li><a href="/programming/git/">Git</a></li>
             <li><a href="/programming/jekyll/">Jekyll</a></li>
             <li><a href="/programming/ruby/">Ruby</a></li>
+            <li><a href="/programming/c/">C</a></li>
         </ul>
     </li>
     <li><a href="/math/">Math</a>
