--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -20,7 +20,7 @@ def search(arr, target):
     left = 0
     right = len(arr) - 1
     while left <= right:
-        mid = (left + right) // 2 # make sure to round it down
+        mid = (left + right) // 2
         if arr[mid] == target:
             return mid
         elif target < arr[mid]:
