--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -17,6 +17,7 @@ permalink: /programming/python/data-structures-and-algorithms/binary-search/
     <p>A Binary Search is actually very easy to implement. Below is the implementation of a Binary Search:</p>
     <pre><code class="language-python">
 def binary_search(arr, target):
+    """This function performs a simple Binary Search on arr and searches for target."""
     left = 0
     right = len(arr) - 1
     while left <= right:
