--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -39,7 +39,7 @@ def binary_search(arr, target):
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The code for a Binary Search is very simple. On the first line, we define a function with <pre><code class="language-python">def binary_search(arr, x):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we have our main code:</p>
+    <p>The code for a Binary Search is very simple. On the first line, we define a function with <pre><code class="language-python">def binary_search(arr, target):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we have our main code:</p>
     <pre><code class="language-python">
 for index in range(len(arr)):
     if arr[index] == x:
