--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -39,11 +39,10 @@ def binary_search(arr, target):
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The code for a Binary Search is very simple. On the first line, we define a function with <pre><code class="language-python">def binary_search(arr, target):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we have our main code:</p>
+    <p>The code for a Binary Search is very simple. On the first line, we define a function with <pre><code class="language-python">def binary_search(arr, target):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we declare some <i>pointers</i>:</p>
     <pre><code class="language-python">
-for index in range(len(arr)):
-    if arr[index] == x:
-        return index
+left = 0
+right = len(arr) - 1
     </code></pre>
     <p>In the code, we <i>loop</i> (or <i>iterate</i>) over the arry/list. For each item, we check if the element is equal to our target. If it is, then we'll return the index where we find it. WHen we return something in Python, we automatically break out of the function, so our function will return the first occurence of the target, if it finds it.</p>
     <p>Finally, on the last line, we have <code>return -1</code>. This will just return <i><code>-1</code> if the target is not found.</i></p>
