--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -5,5 +5,13 @@ layout: electrical-engineering
 ---
 <h1>Capacitors</h1>
 
-<p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster. This is because capacitors store electricity using electric fields, while batteries use chemistry.</p>
-<p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em>.</p>
+<section>
+    <h2>What are Capacitors?</h2>
+    <p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster. This is because capacitors store electricity using electric fields, while batteries use chemistry.</p>
+    <p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em>.</p>
+</section>
+
+<section>
+    <h2>How Capacitors Work</h2>
+    <p></p>
+</section>
