--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -7,5 +7,5 @@ layout: electrical-engineering
 
 <section>
     <h2>What is a Circuit Diagram?</h2>
-    <p>A circuit diagram is used by electrical engineers to more easily represent circuits. Instead of using illustrations of the electrical components, circuit diagram use abstract shapes.</p>
+    <p>A circuit diagram is used by electrical engineers to more easily represent circuits. Instead of using illustrations of the electrical components, circuit diagrams use abstract shapes.</p>
 </section>
