--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -15,8 +15,11 @@ layout: electrical-engineering
 <section>
     <h2>Examples of Circuits</h2>
     <p>Below is an example of a circuit. It has a source of electricity (battery) and a load (light bulb): </p>
+    <img src="/images/physics/electrical-engineering/circuit-example-1.png">
     <p>We can also add a switch to the circuit: </p>
+    <img src="/images/physics/electrical-engineering/circuit-example-2.png">
     <p>We can even have two light bulbs: </p>
+    <img src="/images/physics/electrical-engineering/circuit-example-3.png">
     <p>The following circuit uses two batteries and two loads, a toaster and a light bulb: </p>
 </section>
 
