--- a/programming/python/data-structures-and-algorithms/data-structures.html
+++ b/programming/python/data-structures-and-algorithms/data-structures.html
@@ -8,7 +8,7 @@ permalink: /programming/python/data-structures-and-algorithms/data-structures/
 
 <section>
     <h2>What are Data Structures?</h2>
-    <p></p>
+    <p>Data Structures are ways to organize data so it is simple and efficient to access what you stored. For example, you might make a more advanced version of a <i>list</i>, so you can make it easier to access elements and make it quicker to do so too.</p>
 </section>
 
 <section>
