--- a/programming/python/data-structures-and-algorithms/algorithms.html
+++ b/programming/python/data-structures-and-algorithms/algorithms.html
@@ -8,7 +8,7 @@ permalink: /programming/python/data-structures-and-algorithms/algorithms/
 
 <section>
     <h2>What are Algorithms?</h2>
-    <p></p>
+    <p>Algorithms are ways to calculate data or loop over something. For example, we might write an algorithm to find the average of a list of numbers, or create an algorithm to find the number of valid chess moves in a position. Algorithms can be both complex and simple. It is important for us to understand different algorithms because they make our lives much easier.</p>
 </section>
 
 <section>
