--- a/programming/python/data-structures-and-algorithms/algorithms.html
+++ b/programming/python/data-structures-and-algorithms/algorithms.html
@@ -13,5 +13,5 @@ permalink: /programming/python/data-structures-and-algorithms/algorithms/
 
 <section>
     <h2>Different Algorithms</h2>
-    <p></p>
+    <p>Here are the Algorithms we will learn about in this tutorial series:</p>
 </section>
