--- a/programming/python/data-structures-and-algorithms/data-structures.html
+++ b/programming/python/data-structures-and-algorithms/data-structures.html
@@ -13,5 +13,5 @@ permalink: /programming/python/data-structures-and-algorithms/data-structures/
 
 <section>
     <h2>Different Data Structures</h2>
-    <p></p>
+    <p>Here are the Data Structures we will learn about in this tutorial series:</p>
 </section>
