--- a/programming/python/data-structures-and-algorithms/algorithms.html
+++ b/programming/python/data-structures-and-algorithms/algorithms.html
@@ -14,4 +14,20 @@ permalink: /programming/python/data-structures-and-algorithms/algorithms/
 <section>
     <h2>Different Algorithms</h2>
     <p>Here are the Algorithms we will learn about in this tutorial series:</p>
+    <ul>
+        <li><a href="/programming/python/data-structures-and-algorithms/searching">Searching</a>
+            <ul>
+                <li><a href="/programming/python/data-structures-and-algorithms/linear-search">Linear Search</a></li>
+                <li><a href="/programming/python/data-structures-and-algorithms/binary-search">Binary Search</a></li>
+                <li><a href="/programming/python/data-structures-and-algorithms/jump-search">Jump Search</a></li>
+            </ul>
+        </li>
+        <li><a href="/programming/python/data-structures-and-algorithms/sorting/">Sorting</a>
+            <ul>
+                <li><a href="/programming/python/data-structures-and-algorithms/linear-search">Linear Search</a></li>
+                <li><a href="/programming/python/data-structures-and-algorithms/binary-search">Binary Search</a></li>
+                <li><a href="/programming/python/data-structures-and-algorithms/jump-search">Jump Search</a></li>
+            </ul>
+        </li>
+    </ul>
 </section>
