--- a/programming/python/data-structures-and-algorithms/algorithms.html
+++ b/programming/python/data-structures-and-algorithms/algorithms.html
@@ -24,9 +24,7 @@ permalink: /programming/python/data-structures-and-algorithms/algorithms/
         </li>
         <li><a href="/programming/python/data-structures-and-algorithms/sorting/">Sorting</a>
             <ul>
-                <li><a href="/programming/python/data-structures-and-algorithms/linear-search">Linear Search</a></li>
-                <li><a href="/programming/python/data-structures-and-algorithms/binary-search">Binary Search</a></li>
-                <li><a href="/programming/python/data-structures-and-algorithms/jump-search">Jump Search</a></li>
+                <li><a href="/programming/python/data-structures-and-algorithms/bubble-sort/">Bubble Sort</a></li>
             </ul>
         </li>
     </ul>
