--- a/programming/python/data-structures-and-algorithms/data-structures.html
+++ b/programming/python/data-structures-and-algorithms/data-structures.html
@@ -14,4 +14,9 @@ permalink: /programming/python/data-structures-and-algorithms/data-structures/
 <section>
     <h2>Different Data Structures</h2>
     <p>Here are the Data Structures we will learn about in this tutorial series:</p>
+    <ul>
+        <li><a href="/programming/python/data-structures-and-algorithms/stacks/">Stacks</a></li>
+        <li><a href="/programming/python/data-structures-and-algorithms/queues/">Queues</a></li>
+        <li><a href="/programming/python/data-structures-and-algorithms/deques/">Deques</a></li>
+    </ul>
 </section>
