--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -11,7 +11,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 <section>
     <h2>What are Stacks?</h2>
     <p>Stacks are a simple but useful Data Structure. They're used in Programming Competitions and Job Interviews, so it is a good idea to learn about them.</p>
-    <p>Basically, Stacks are like actual stacks. Imagine that you have some pancakes stacked on top of each other.</p>
+    <p>In Programming, Stacks are like actual stacks of items. Imagine that you have some pancakes stacked on top of each other.</p>
     <div style="height: 75px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">3</div>
     <div style="height: 75px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">42</div>
     <div style="height: 75px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">-29</div>
