forgot another br whaaaaaaaaaaaa :( ;( :|

--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -35,7 +35,7 @@ print(history.pop())
 print(history)
     </code></pre>
     <p>After running the code, you'll get <samp>5<br>
-[1, 2, 3, 4]</samp> printed out into the terinal.</p>
+[1, 2, 3, 4]</samp><br> printed out into the terinal.</p>
     <p>On the first two lines, we call the <code>append</code> method on our <code>history</code> list. This will add the element we pass in to the end of our list. After running these two lines of code, our <code>history</code> list will be <code>[1, 2, 3, 4, 5]</code>. First, it will add <code>4</code> to the list and then it will add <code>5</code>.</p>
     <p>Then, we have <pre><code class="language-python">
 print(history.pop())
