--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -44,7 +44,7 @@ print(history)
 </section>
 
 <section>
-    <h2>Stacks in Contests</h2>
+    <h2>Stacks in Competition</h2>
     <p>We've already gone over how Stacks work and how to implement one. So, now, let's go over using Stacks in Programming Competitions and Job Interview problems.</p>
     <section>
         <h3>When To Use Stacks</h3>
