--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -26,6 +26,7 @@ layout: electrical-engineering
     <h2>Parallel and Series Circuits</h2>
     <p>A series circuit is a circuit where all of the electrical components are connected on the same wire. One disadvantage is that if one component fails, the electrons stop flowing and none of the others can work: </p>
     <p>A parallel circuit is where all of the electrical components are connected in parallel to each other. One advantage is that if one component fails, all the others can operate: </p>
+    <img src="/images/physics/electrical-engineering/parallel-circuit.png">
 </section>
 
 <section>
