--- a/programming/python/data-structures-and-algorithms/sorting.html
+++ b/programming/python/data-structures-and-algorithms/sorting.html
@@ -9,7 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/sorting/
 
 <section>
     <h2>What is Sorting?</h2>
-    <p></p>
+    <p>Sorting is simply sorting the elements in a <i>list</i> (<i>array</i>), usually from the smaller values to the higher values.</p>
 </section>
 
 <section>
