--- a/programming/index.html
+++ b/programming/index.html
@@ -14,6 +14,10 @@ layout: default
         <li><a href="/programming/golang/">Go</a></li>
         <li><a href="/programming/cpp/">C++</a></li>
         <li><a href="/programming/git/">Git</a></li>
+        <li><a href="/programming/java/">Java</a></li>
+        <li><a href="/programming/jekyll/">Jekyll</a></li>
+        <li><a href="/programming/ruby/">Ruby</a></li>
+        <li><a href="/programming/c/">C</a></li>
     </ul>
     <p>Find more programming tutorials in our <a href="/tutorial-index/">Tutorial Index</a>.</p>
 </section>
