--- a/programming/c/index.html
+++ b/programming/c/index.html
@@ -8,6 +8,7 @@ layout: c
 <section>
     <h2>What is C?</h2>
     <p></p>
+    <img src="/images/programming/c/c-logo.png" alt="The C Logo">
 </section>
 
 <section>
