add c first program

--- a/programming/c/first-program.html
+++ b/programming/c/first-program.html
@@ -3,3 +3,15 @@ permalink: /programming/c/first-program/
 layout: c
 ---
 <h1>Your First C Program</h1>
+
+<section>
+    <h2>Writing the Code</h2>
+    <p>Below is what our code will look like:</p>
+    <pre><code class="language-c">
+#include &lt;stdio.h>
+int main() {
+   printf("Hello, World!");
+   return 0;
+}
+    </code></pre>
+</section>
