--- a/programming/ruby/index.html
+++ b/programming/ruby/index.html
@@ -8,6 +8,7 @@ layout: ruby
 <section>
     <h2>What is Ruby?</h2>
     <p>Ruby is a programming language</p>
+    <img src="/images/programming/ruby/ruby-logo.png" alt="The Logo of Ruby">
 </section>
 
 <section>
