why learn java section

--- a/programming/java/index.html
+++ b/programming/java/index.html
@@ -13,6 +13,11 @@ permalink: /programming/java/
 </section>
 
 <section>
+    <h2>Why Learn Java?</h2>
+    <p>Java is one of the most popular and in-demand programming languages. Java is also versatile and can do may things.</p>
+</section>
+
+<section>
     <h2>History</h2>
     <p>Java was created by James Gosling at Sun Microsystems and was first released in 1995. Sun was later acquired by Oracle, which is now the developer of Java.</p>
 </section>
