--- a/math/shape-space/transformations.html
+++ b/math/shape-space/transformations.html
@@ -13,5 +13,10 @@ layout: shape-space
 
 <section>
     <h2>Different Transformations</h2>
-    <p></p>
+    <p>There are <u>three</u> main transformations:</p>
+    <ul>
+        <li>The Translation</li>
+        <li>The Reflectiom</li>
+        <li>The Rotatiom</li>
+    </ul>
 </section>
