--- a/math/shape-space/transformations.html
+++ b/math/shape-space/transformations.html
@@ -16,7 +16,7 @@ layout: shape-space
     <p>There are <u>three</u> main transformations:</p>
     <ul>
         <li>The Translation</li>
-        <li>The Reflectiom</li>
-        <li>The Rotatiom</li>
+        <li>The Reflection</li>
+        <li>The Rotation</li>
     </ul>
 </section>
