--- a/math/shape-space/transformations.html
+++ b/math/shape-space/transformations.html
@@ -19,4 +19,5 @@ layout: shape-space
         <li>The Reflection</li>
         <li>The Rotation</li>
     </ul>
+    <p>Of course, there are also some other Transformations like Dilations but these are the main ones.</p>
 </section>
